evaluate native types with xcel
Signed-off-by: Matthias Bertschy <matthias.bertschy@gmail.com>

--- a/pkg/rules/r0002-unexpected-file-access/unexpected-file-access.yaml
+++ b/pkg/rules/r0002-unexpected-file-access/unexpected-file-access.yaml
@@ -12,29 +12,29 @@ spec:
     id: "R0002"
     description: "Detects unexpected file access that is not in the baseline"
     expressions:
-      message: "'Unexpected file access detected: ' + event.comm + ' with PID ' + string(event.pid) + ' to ' + event.fullPath"
-      unique_id: "event.comm + '_' + event.fullPath"
+      message: "'Unexpected file access detected: ' + open.comm + ' with PID ' + string(open.pid) + ' to ' + open.full_path"
+      unique_id: "open.comm + '_' + open.full_path"
       rule_expression:
         - event_type: "open"
           expression: >
-            (event.fullPath.startsWith('/etc/') ||
-            event.fullPath.startsWith('/var/log/') ||
-            event.fullPath.startsWith('/var/run/') ||
-            event.fullPath.startsWith('/run/') ||
-            event.fullPath.startsWith('/var/spool/cron/') ||
-            event.fullPath.startsWith('/var/www/') ||
-            event.fullPath.startsWith('/var/lib/') ||
-            event.fullPath.startsWith('/opt/') ||
-            event.fullPath.startsWith('/usr/local/') ||
-            event.fullPath.startsWith('/app/') ||
-            event.fullPath == '/.dockerenv' ||
-            event.fullPath == '/proc/self/environ')
+            (open.full_path.startsWith('/etc/') ||
+            open.full_path.startsWith('/var/log/') ||
+            open.full_path.startsWith('/var/run/') ||
+            open.full_path.startsWith('/run/') ||
+            open.full_path.startsWith('/var/spool/cron/') ||
+            open.full_path.startsWith('/var/www/') ||
+            open.full_path.startsWith('/var/lib/') ||
+            open.full_path.startsWith('/opt/') ||
+            open.full_path.startsWith('/usr/local/') ||
+            open.full_path.startsWith('/app/') ||
+            open.full_path == '/.dockerenv' ||
+            open.full_path == '/proc/self/environ')
             &&
-            !(event.fullPath.startsWith('/run/secrets/kubernetes.io/serviceaccount') ||
-              event.fullPath.startsWith('/var/run/secrets/kubernetes.io/serviceaccount') ||
-              event.fullPath.startsWith('/tmp'))
+            !(open.full_path.startsWith('/run/secrets/kubernetes.io/serviceaccount') ||
+              open.full_path.startsWith('/var/run/secrets/kubernetes.io/serviceaccount') ||
+              open.full_path.startsWith('/tmp'))
             &&
-            !ap.was_path_opened(event.runtime.containerId, event.fullPath)
+            !ap.was_path_opened(open.runtime.container_id, open.full_path)
     profile_dependency: 0
     severity: 1
     support_policy: false
