--- a/pkg/rules/r1005-fileless-execution/fileless-execution.yaml
+++ b/pkg/rules/r1005-fileless-execution/fileless-execution.yaml
@@ -12,15 +12,15 @@ spec:
     id: "R1005"
     description: "Detecting Fileless Execution"
     expressions:
-      message: "'Fileless execution detected: exec call \"' + event.comm + '\" is from a malicious source'"
-      unique_id: "event.comm + '_' + event.exepath + '_' + event.pcomm"
+      message: "'Fileless execution detected: exec call \"' + exec.comm + '\" is from a malicious source'"
+      unique_id: "exec.comm + '_' + exec.exe_path + '_' + exec.pcomm"
       rule_expression:
         - event_type: "exec"
-          expression: "event.exepath.contains('memfd') || event.exepath.startsWith('/proc/self/fd') || event.exepath.matches('/proc/[0-9]+/fd/[0-9]+')"
+          expression: "exec.exe_path.contains('memfd') || exec.exe_path.startsWith('/proc/self/fd') || exec.exe_path.matches('/proc/[0-9]+/fd/[0-9]+')"
     profile_dependency: 2
     severity: 8
     support_policy: false
     tags:
       - "fileless"
       - "execution"
-      - "malicious" 
+      - "malicious"
