--- a/pkg/rules/r0009-ebpf-program-load/ebpf-program-load.yaml
+++ b/pkg/rules/r0009-ebpf-program-load/ebpf-program-load.yaml
@@ -12,15 +12,15 @@ spec:
     id: "R0009"
     description: "Detecting eBPF program load."
     expressions:
-      message: "'bpf system call executed in ' + event.k8s.containerName"
-      unique_id: "event.comm + '_' + event.syscallName"
+      message: "'bpf system call executed in ' + syscall.k8s.container_name"
+      unique_id: "syscall.comm + '_' + syscall.syscall_name"
       rule_expression:
         - event_type: "syscall"
-          expression: "event.syscallName == 'bpf' && !ap.was_syscall_used(event.runtime.containerId, event.syscallName)"
+          expression: "syscall.syscall_name == 'bpf' && !ap.was_syscall_used(syscall.runtime.container_id, syscall.syscall_name)"
     profile_dependency: 1
     severity: 5
     support_policy: false
     tags:
       - "syscall"
-      - "ebpf" 
+      - "ebpf"
       - "applicationprofile"
