--- a/pkg/rules/r0010-unexpected-sensitive-file-access/unexpected-sensitive-file-access.yaml
+++ b/pkg/rules/r0010-unexpected-sensitive-file-access/unexpected-sensitive-file-access.yaml
@@ -12,11 +12,11 @@ spec:
     id: "R0010"
     description: "Detecting access to sensitive files."
     expressions:
-      message: "'Unexpected sensitive file access: ' + event.fullPath + ' by process ' + event.comm"
-      unique_id: "event.comm + '_' + event.fullPath"
+      message: "'Unexpected sensitive file access: ' + open.full_path + ' by process ' + open.comm"
+      unique_id: "open.comm + '_' + open.full_path"
       rule_expression:
         - event_type: "open"
-          expression: "event.fullPath.startsWith('/etc/shadow') && !ap.was_path_opened(event.runtime.containerId, event.fullPath)"
+          expression: "open.full_path.startsWith('/etc/shadow') && !ap.was_path_opened(open.runtime.container_id, open.full_path)"
     profile_dependency: 1
     severity: 5
     support_policy: false
