--- a/pkg/rules/r1003-malicious-ssh-connection/malicious-ssh-connection.yaml
+++ b/pkg/rules/r1003-malicious-ssh-connection/malicious-ssh-connection.yaml
@@ -12,11 +12,11 @@ spec:
     id: "R1003"
     description: "Detecting ssh connection to disallowed port"
     expressions:
-      message: "'Malicious SSH connection attempt to ' + event.dst_ip + ':' + string(event.dst_port)"
-      unique_id: "event.comm + '_' + event.dst_ip + '_' + string(event.dst_port)"
+      message: "'Malicious SSH connection attempt to ' + ssh.dst_ip + ':' + string(dyn(ssh.dst_port))"
+      unique_id: "ssh.comm + '_' + ssh.dst_ip + '_' + string(dyn(ssh.dst_port))"
       rule_expression:
         - event_type: "ssh"
-          expression: "event.src_port >= 32768 && event.src_port <= 60999 && !(event.dst_port in [22, 2022]) && !nn.was_address_in_egress(event.runtime.containerId, event.dst_ip)"
+          expression: "dyn(ssh.src_port) >= 32768 && dyn(ssh.src_port) <= 60999 && !(dyn(ssh.dst_port) in [22, 2022]) && !nn.was_address_in_egress(ssh.runtime.container_id, ssh.dst_ip)"
     profile_dependency: 1
     severity: 5
     support_policy: false
@@ -25,4 +25,4 @@ spec:
       - "connection"
       - "port"
       - "malicious"
-      - "networkprofile" 
+      - "networkprofile"
