--- a/pkg/rules/r1015-malicious-ptrace-usage/malicious-ptrace-usage.yaml
+++ b/pkg/rules/r1015-malicious-ptrace-usage/malicious-ptrace-usage.yaml
@@ -12,8 +12,8 @@ spec:
     id: "R1015"
     description: "Detecting potentially malicious ptrace usage."
     expressions:
-      message: "'Malicious ptrace usage detected from: ' + event.comm + ' on PID: ' + string(event.pid)"
-      unique_id: "event.exe_path + '_' + event.comm"
+      message: "'Malicious ptrace usage detected from: ' + ptrace.comm + ' on PID: ' + string(ptrace.pid)"
+      unique_id: "ptrace.exe_path + '_' + ptrace.comm"
       rule_expression:
         - event_type: "ptrace"
           expression: "true"
@@ -22,4 +22,4 @@ spec:
     support_policy: false
     tags:
       - "process"
-      - "malicious" 
+      - "malicious"
