--- a/pkg/rules/r1030-unexpected-io_uring-operation/unexpected-io_uring-operation.yaml
+++ b/pkg/rules/r1030-unexpected-io_uring-operation/unexpected-io_uring-operation.yaml
@@ -12,8 +12,8 @@ spec:
     id: "R1030"
     description: "Detects io_uring operations that were not recorded during the initial observation period, indicating potential unauthorized activity."
     expressions:
-      message: "'Unexpected io_uring operation detected: (opcode=' + string(event.opcode) + ') flags=0x' + (has(event.flags) ? string(event.flags) : '0') + ' in ' + event.comm + '.'"
-      unique_id: "string(event.opcode) + '_' + event.comm"
+      message: "'Unexpected io_uring operation detected: (opcode=' + string(iouring.opcode) + ') flags=0x' + (has(iouring.flags) ? string(iouring.flags) : '0') + ' in ' + iouring.comm + '.'"
+      unique_id: "string(iouring.opcode) + '_' + iouring.comm"
       rule_expression:
         - event_type: "iouring"
           expression: "true"
@@ -23,4 +23,4 @@ spec:
     tags:
       - "syscalls"
       - "io_uring"
-      - "applicationprofile" 
+      - "applicationprofile"
