--- a/pkg/rules/r1011-ld-preload-hook/ld-preload-hook.yaml
+++ b/pkg/rules/r1011-ld-preload-hook/ld-preload-hook.yaml
@@ -12,8 +12,8 @@ spec:
     id: "R1011"
     description: "Detecting ld_preload hook techniques."
     expressions:
-      message: "dfasdfsdf"
-      unique_id: "sdfsdffs"
+      message: "event_type == 'exec' ? 'Process (' + exec.comm + ') is using a dynamic linker hook: ' + process.get_ld_hook_var(exec.pid) : 'The dynamic linker configuration file (' + open.full_path + ') was modified by process (' + open.comm + ')'"
+      unique_id: "event_type == 'exec' ? 'exec_' + exec.comm + '_' + exec.runtime.container_id : 'open_' + open.full_path + '_' + open.runtime.container_id"
       rule_expression:
         - event_type: "exec"
           expression: "exec.comm != 'java' && exec.k8s.container_name != 'matlab' && process.get_ld_hook_var(exec.pid) != ''"
