--- a/pkg/rules/r1012-hardlink-created-over-sensitive-file/hardlink-created-over-sensitive-file.yaml
+++ b/pkg/rules/r1012-hardlink-created-over-sensitive-file/hardlink-created-over-sensitive-file.yaml
@@ -19,7 +19,7 @@ spec:
           expression: "(hardlink.old_path.startsWith('/etc/shadow') || hardlink.old_path.startsWith('/etc/sudoers')) && !ap.was_path_opened(hardlink.runtime.container_id, hardlink.old_path)"
     profile_dependency: 1
     severity: 5
-    support_policy: true
+    support_policy: false
     tags:
       - "files"
       - "malicious"
