--- a/pkg/rules/r1011-ld-preload-hook/ld-preload-hook.yaml
+++ b/pkg/rules/r1011-ld-preload-hook/ld-preload-hook.yaml
@@ -13,14 +13,14 @@ spec:
     description: "Detecting ld_preload hook techniques."
     expressions:
       message: "event_type == 'exec' ? 'Process (' + exec.comm + ') is using a dynamic linker hook: ' + process.get_ld_hook_var(exec.pid) : 'The dynamic linker configuration file (' + open.full_path + ') was modified by process (' + open.comm + ')'"
-      unique_id: "event_type == 'exec' ? 'exec_' + exec.comm + '_' + exec.runtime.container_id : 'open_' + open.full_path + '_' + open.runtime.container_id"
+      unique_id: "event_type == 'exec' ? 'exec_' + exec.comm : 'open_' + open.full_path"
       rule_expression:
         - event_type: "exec"
           expression: "exec.comm != 'java' && exec.k8s.container_name != 'matlab' && process.get_ld_hook_var(exec.pid) != ''"
         - event_type: "open"
           expression: "open.full_path == '/etc/ld.so.preload' && has(open.flags_raw) && open.flags_raw != 0"
     profile_dependency: 1
-    severity: 3
+    severity: 5
     support_policy: true
     tags:
       - "exec"
