fixed rule names
Signed-off-by: Afek Berger <afekb@armosec.io>

--- a/pkg/rules/r0002-unexpected-file-access/unexpected-file-access.yaml
+++ b/pkg/rules/r0002-unexpected-file-access/unexpected-file-access.yaml
@@ -7,8 +7,8 @@ metadata:
     app: kubescape
 spec:
   rules:
-  - name: "Unexpected file access"
-    enabled: true
+  - name: "Files Access Anomalies in container"
+    enabled: false
     id: "R0002"
     description: "Detects unexpected file access that is not in the baseline"
     expressions:
