--- a/pkg/rules/r0006-unexpected-service-account-token-access/unexpected-service-account-token-access.yaml
+++ b/pkg/rules/r0006-unexpected-service-account-token-access/unexpected-service-account-token-access.yaml
@@ -7,7 +7,7 @@ metadata:
     app: kubescape
 spec:
   rules:
-  - name: "Unexpected Service Account Token Access"
+  - name: "Unexpected service account token access"
     enabled: true
     id: "R0006"
     description: "Detecting unexpected access to service account token."
