--- a/pkg/rules/r1002-kernel-module-load/kernel-module-load.yaml
+++ b/pkg/rules/r1002-kernel-module-load/kernel-module-load.yaml
@@ -7,7 +7,7 @@ metadata:
     app: kubescape
 spec:
   rules:
-  - name: "Kernel Module Load"
+  - name: "Process tries to load a kernel module"
     enabled: true
     id: "R1002"
     description: "Detecting Kernel Module Load."
