--- a/pkg/rules/r1011-ld-preload-hook/ld-preload-hook.yaml
+++ b/pkg/rules/r1011-ld-preload-hook/ld-preload-hook.yaml
@@ -7,8 +7,8 @@ metadata:
     app: kubescape
 spec:
   rules:
-  - name: "LD_PRELOAD Hook"
-    enabled: true
+  - name: "ld_preload hooks technique detected"
+    enabled: false
     id: "R1011"
     description: "Detecting ld_preload hook techniques."
     expressions:
