--- a/pkg/rules/r0003-unexpected-system-call/unexpected-system-call.yaml
+++ b/pkg/rules/r0003-unexpected-system-call/unexpected-system-call.yaml
@@ -7,7 +7,7 @@ metadata:
     app: kubescape
 spec:
   rules:
-  - name: "Unexpected system call"
+  - name: "Syscalls Anomalies in container"
     enabled: true
     id: "R0003"
     description: "Detects unexpected system calls that are not whitelisted by application profile"
