--- a/pkg/rules/r0007-kubernetes-client-executed/kubernetes-client-executed.yaml
+++ b/pkg/rules/r0007-kubernetes-client-executed/kubernetes-client-executed.yaml
@@ -7,7 +7,7 @@ metadata:
     app: kubescape
 spec:
   rules:
-  - name: "Kubernetes Client Executed"
+  - name: "Workload uses Kubernetes API unexpectedly"
     enabled: true
     id: "R0007"
     description: "Detecting execution of kubernetes client"
