--- a/pkg/rules/r0011-unexpected-egress-network-traffic/unexpected-egress-network-traffic.yaml
+++ b/pkg/rules/r0011-unexpected-egress-network-traffic/unexpected-egress-network-traffic.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   rules:
   - name: "Unexpected Egress Network Traffic"
-    enabled: true
+    enabled: false
     id: "R0011"
     description: "Detecting unexpected egress network traffic that is not whitelisted by application profile."
     expressions:
