--- a/pkg/rules/r1001-exec-binary-not-in-base-image/exec-binary-not-in-base-image.yaml
+++ b/pkg/rules/r1001-exec-binary-not-in-base-image/exec-binary-not-in-base-image.yaml
@@ -7,7 +7,7 @@ metadata:
     app: kubescape
 spec:
   rules:
-  - name: "Exec Binary Not In Base Image"
+  - name: "Drifted process executed"
     enabled: true
     id: "R1001"
     description: "Detecting exec calls of binaries that are not included in the base image"
