--- a/pkg/rules/r1003-malicious-ssh-connection/malicious-ssh-connection.yaml
+++ b/pkg/rules/r1003-malicious-ssh-connection/malicious-ssh-connection.yaml
@@ -7,7 +7,7 @@ metadata:
     app: kubescape
 spec:
   rules:
-  - name: "Malicious SSH Connection"
+  - name: "Disallowed ssh connection"
     enabled: true
     id: "R1003"
     description: "Detecting ssh connection to disallowed port"
