--- a/pkg/rules/r1004-exec-from-mount/exec-from-mount.yaml
+++ b/pkg/rules/r1004-exec-from-mount/exec-from-mount.yaml
@@ -7,7 +7,7 @@ metadata:
     app: kubescape
 spec:
   rules:
-  - name: "Exec from mount"
+  - name: "Process executed from mount"
     enabled: true
     id: "R1004"
     description: "Detecting exec calls from mounted paths."
