--- a/pkg/rules/r1005-fileless-execution/fileless-execution.yaml
+++ b/pkg/rules/r1005-fileless-execution/fileless-execution.yaml
@@ -7,7 +7,7 @@ metadata:
     app: kubescape
 spec:
   rules:
-  - name: "Fileless Execution"
+  - name: "Fileless execution detected"
     enabled: true
     id: "R1005"
     description: "Detecting Fileless Execution"
