--- a/pkg/rules/r1006-unshare-syscall/unshare-syscall.yaml
+++ b/pkg/rules/r1006-unshare-syscall/unshare-syscall.yaml
@@ -7,7 +7,7 @@ metadata:
     app: kubescape
 spec:
   rules:
-  - name: "Unshare System Call usage"
+  - name: "Process tries to escape container"
     enabled: true
     id: "R1006"
     description: "Detecting Unshare System Call usage, which can be used to escape container."
