--- a/pkg/rules/r1012-hardlink-created-over-sensitive-file/hardlink-created-over-sensitive-file.yaml
+++ b/pkg/rules/r1012-hardlink-created-over-sensitive-file/hardlink-created-over-sensitive-file.yaml
@@ -7,7 +7,7 @@ metadata:
     app: kubescape
 spec:
   rules:
-  - name: "Hardlink Created Over Sensitive File"
+  - name: "Hard link created over sensitive file"
     enabled: true
     id: "R1012"
     description: "Detecting hardlink creation over sensitive files."
