--- a/pkg/rules/r1003-malicious-ssh-connection/malicious-ssh-connection.yaml
+++ b/pkg/rules/r1003-malicious-ssh-connection/malicious-ssh-connection.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   rules:
   - name: "Disallowed ssh connection"
-    enabled: true
+    enabled: false
     id: "R1003"
     description: "Detecting ssh connection to disallowed port"
     expressions:
